[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-rag-engine"
version = "0.1.0"
description = "Production-ready secure 2-stage RAG orchestration blueprint"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pydantic>=1.10,<2.0",
  "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
